[FAQ] Inline::Perl5 added

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -314,6 +314,11 @@ L<rakudo|http://rakudo.org/>.
 
 Support for installing Perl 6 modules from the Perl 5 CPAN is on its way.
 
+=head2 Can I use Perl 5 modules from Perl 6?
+
+Yes with L<Inline::Perl5|https://github.com/niner/Inline-Perl5/>
+which works well enough to run Perl 5 Catalyst and DBI.
+
 =head2 Does Rakudo have a core standard library?
 
 Rakudo is a compiler release with minimal batteries included rather like the
