[FAQadd a general section

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -4,6 +4,48 @@
 
 =SUBTITLE Frequently Asked Questions about Perl 6
 
+=head1 General
+
+=head2 What's the difference between Rakudo and Perl 6?
+
+Rakudo is an implementation of Perl 6. Its currently the most developed but
+there have been other implementations in the past and probably others in the
+future. Perl 6 is the definition of the language. Many times the two names
+will be used loosely and interchangeably.
+
+=head2 As a Perl 6 beginner what should I install?
+
+If you are a Linux or Mac user you probably want to download Rakudo Star and
+install via compilation (a simple process) the MoarVM version available from
+L<http://rakudo.org/downloads/star/|http://rakudo.org/downloads/star>.
+
+If you are a Windows 32 or 64 bit user then Rakudo Star binaries are also
+available at the rakudo site. You will need Windows Git to use panda.  
+
+There will probably be Linux and Mac binaries available shortly from vendors
+and third parties. Although vendor versions may be outdated.  
+
+=head2 As an intermediate to advanced user I want to track Rakudo development.
+
+Install L<rakudobrew|https://github.com/tadzik/rakudobrew> which resembles
+Perl 5's perlbrew and the equivalent Python and Ruby tools.
+
+=head2 Where can I find good documentation on Perl 6?
+
+The most reliable information is to be found either under the perl6.org domains or directly linked from it.
+
+L<http://www.perl6.org/documentation/|http://www.perl6.org/documentation/>
+
+and
+
+L<http://doc.perl6.org/|http://doc.perl6.org/>
+
+is the canonical technical reference.
+
+There is much good recent material on Youtube but be careful to check any dates
+on webpages since much of the Perl 6 information on random websites found
+by Google is often outdated.
+
 =head1 Language Features
 
 =head2 Why is the Rakudo compiler sometimes more apologetic?
