[FAQ] 5to6- entry

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -46,6 +46,13 @@ There is much good recent material on Youtube but be careful to check any dates
 on webpages since much of the Perl 6 information on random websites found
 by Google is often outdated.
 
+=head2 I'm a programmer in perl5.  Where is a list of differences between Perl 5 and 6?
+
+See the pod with the 5to6- prefix under
+
+L<http://doc.perl6.org/language.html|http://doc.perl6.org/language.html>
+
+
 =head1 Language Features
 
 =head2 Why is the Rakudo compiler sometimes more apologetic?
