[FAQ] linenoise and data structure dumping

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -55,6 +55,28 @@ L<http://doc.perl6.org/language.html|http://doc.perl6.org/language.html>
 
 =head1 Language Features
 
+=head2 How can I dump Perl 6 data structures (like Perl 5 Data::Dumper and similar)?
+
+Examples:
+    my $foo="bar"
+    dd $foo # Str $foo = "bar"
+    say :$foo.perl # :foo("bar")
+    say :$foo.gist # foo => bar
+
+There are also modules to do this in the ecosystem like
+
+L<Data::Dump|https://github.com/tony-o/perl6-data-dump/>
+
+which uses color.
+
+=head2 How can I get command line history in the perl 6 prompt (REPL)?
+
+Install  L<Linenoise|https://github.com/hoelzro/p6-linenoise/> from the
+ecosystem.
+
+An alternative on UNIX like systems is to install rlwrap. This can
+be done on Debian-ish systems by "apt-get install rlwrap".
+
 =head2 Why is the Rakudo compiler sometimes more apologetic?
 
 If SORRY! is present in the output the error is a compile time error 
