--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -20,10 +20,10 @@ install via compilation (a simple process) the MoarVM version available from
 L<http://rakudo.org/downloads/star/|http://rakudo.org/downloads/star>.
 
 If you are a Windows 32 or 64 bit user then Rakudo Star binaries are also
-available at the rakudo site. You will need Windows Git to use panda.  
+available at the rakudo site. You will need Windows Git to use panda. 
 
 There will probably be Linux and Mac binaries available shortly from vendors
-and third parties. Although vendor versions may be outdated.  
+and third parties. Although vendor versions may be outdated. 
 
 =head2 As an intermediate to advanced user I want to track Rakudo development.
 
@@ -34,40 +34,54 @@ Perl 5's perlbrew and the equivalent Python and Ruby tools.
 
 The most reliable information is to be found either under the perl6.org domains or directly linked from it.
 
-L<http://www.perl6.org/documentation/|http://www.perl6.org/documentation/>
-
-and
-
-L<http://doc.perl6.org/|http://doc.perl6.org/>
-
-is the canonical technical reference.
+L<http://www.perl6.org/documentation/|http://www.perl6.org/documentation/> with 
+L<http://doc.perl6.org/|http://doc.perl6.org/> as the canonical technical reference.
 
 There is much good recent material on Youtube but be careful to check any dates
 on webpages since much of the Perl 6 information on random websites found
 by Google is often outdated.
 
-=head2 I'm a programmer in perl5.  Where is a list of differences between Perl 5 and 6?
+=head2 I'm a programmer in perl5. Where is a list of differences between Perl 5 and 6?
 
-See the pod with the 5to6- prefix under
+See the pod with the 5to6- prefix under L<http://doc.perl6.org/language.html|http://doc.perl6.org/language.html>
 
-L<http://doc.perl6.org/language.html|http://doc.perl6.org/language.html>
+=head1 Modules 
 
+=head2 Is there a CPAN for Perl 6?
+
+There isn't yet a module repository for Perl 6 as sophisticated as CPAN. But
+L<modules.perl6.org|http://modules.perl6.org/> has a list of known Perl 6
+modules called the "ecosystem" hosted on github, and
+L<panda|https://github.com/tadzik/panda/> can install those that work with
+L<rakudo|http://rakudo.org/>.
+
+Support for installing Perl 6 modules from the Perl 5 CPAN is on its way.
+
+=head2 Can I use Perl 5 modules from Perl 6?
+
+Yes with L<Inline::Perl5|https://github.com/niner/Inline-Perl5/>
+which works well enough to run Perl 5 Catalyst and DBI.
+
+=head2 Does Rakudo have a core standard library?
+
+Rakudo is a compiler release with minimal batteries included rather like the
+linux kernel itself.
+
+Rakudo Star is a distribution of rakudo which ships with some useful modules
+and many more can be installed from the ecosystem.
 
 =head1 Language Features
 
 =head2 How can I dump Perl 6 data structures (like Perl 5 Data::Dumper and similar)?
 
 Examples:
+
     my $foo="bar"
     dd $foo # Str $foo = "bar"
     say :$foo.perl # :foo("bar")
     say :$foo.gist # foo => bar
 
-There are also modules to do this in the ecosystem like
-
-L<Data::Dump|https://github.com/tony-o/perl6-data-dump/>
-
-which uses color.
+There are also modules to do this in the ecosystem like L<Data::Dump|https://github.com/tony-o/perl6-data-dump/> which uses color.
 
 =head2 How can I get command line history in the perl 6 prompt (REPL)?
 
@@ -102,7 +116,7 @@ Example:
     say $foo # (Any) note the parens indicate type object
     say $foo.^name # Any
 
-(Any) shouldn't be used to check for definedness.  In Perl 6, definedness is a
+(Any) shouldn't be used to check for definedness. In Perl 6, definedness is a
 property of an object. Usually instances are defined and type objects are
 undefined.
 
@@ -161,7 +175,7 @@ Example:
     }
 
     foo(2,3.1) 
-    # Calling foo(Int, Rat) will never work with declared signature (Int $a, Int $b --> Int)
+    # ===SORRY!===  ... Calling foo(Int, Rat) will never work with declared signature (Int $a, Int $b --> Int)
 
 =head2 How can I extract the values from a Junction?
 
@@ -372,31 +386,6 @@ that knows how to respond to method calls that are typical for a context.
 For example regex matches return L<Match objects that know how to respond
 to list indexing, hash indexing, and that can turn into the matched
 string|/type/Match>.
-
-=head1 Modules 
-
-=head2 Is there a CPAN for Perl 6?
-
-There isn't yet a module repository for Perl 6 as sophisticated as CPAN.  But
-L<modules.perl6.org|http://modules.perl6.org/> has a list of known Perl 6
-modules called the "ecosystem" hosted on github, and
-L<panda|https://github.com/tadzik/panda/> can install those that work with
-L<rakudo|http://rakudo.org/>.
-
-Support for installing Perl 6 modules from the Perl 5 CPAN is on its way.
-
-=head2 Can I use Perl 5 modules from Perl 6?
-
-Yes with L<Inline::Perl5|https://github.com/niner/Inline-Perl5/>
-which works well enough to run Perl 5 Catalyst and DBI.
-
-=head2 Does Rakudo have a core standard library?
-
-Rakudo is a compiler release with minimal batteries included rather like the
-linux kernel itself.
-
-Rakudo Star is a distribution of rakudo which ships with some useful modules
-and many more can be installed from the ecosystem.
 
 =head1 Meta Questions and Advocacy
 
