--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -38,8 +38,16 @@ L<http://www.perl6.org/documentation/|http://www.perl6.org/documentation/> with
 L<http://doc.perl6.org/|http://doc.perl6.org/> as the canonical technical reference.
 
 There is much good recent material on Youtube but be careful to check any dates
-on webpages since much of the Perl 6 information on random websites found
-by Google is often outdated.
+on webpages since much of the Perl 6 information on random websites found by
+Google is often outdated.
+
+You could also try searching the Freenode #perl6 IRC channel log via
+L<Google|https://www.google.co.uk/search?q=site:irclog.perlgeek.de+inurl:perl6>
+although you might see a Capatcha.
+
+=head2 Is there a glossary of Perl 6 related terms?
+
+See L<S99|http://design.perl6.org/S99.html#dynamic>
 
 =head2 I'm a programmer in perl5. Where is a list of differences between Perl 5 and 6?
 
@@ -59,13 +67,26 @@ Support for installing Perl 6 modules from the Perl 5 CPAN is on its way.
 
 =head2 Can I use Perl 5 modules from Perl 6?
 
-Yes with L<Inline::Perl5|https://github.com/niner/Inline-Perl5/>
-which works well enough to run Perl 5 Catalyst and DBI.
+With L<Inline::Perl5|https://github.com/niner/Inline-Perl5/> which works well
+enough to run Perl 5 Catalyst and DBI.
+
+=head2 Can I use C and C++ from Perl 6?
+
+L<Nativecall|http://docs.perl6.org/language/nativecall> makes this particularly easy.
+
+=head2 Nativecall can't find libfoo.so and I only have libfoo.so.1.2!
+
+This is commonly seen on Debian-like systems. You need to install "libfoo-dev"
+to set a sym link for the missing file. 
+
+=head2 Where have all the traditional UNIX library functions gone?
+
+It's very easy to use Nativecall to access them.
 
 =head2 Does Rakudo have a core standard library?
 
-Rakudo is a compiler release with minimal batteries included rather like the
-linux kernel itself.
+Rakudo is a compiler release with minimal batteries included (Test and
+Nativecall etc.) rather like the linux kernel itself.
 
 Rakudo Star is a distribution of rakudo which ships with some useful modules
 and many more can be installed from the ecosystem.
