Use more generic link to S99

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -47,7 +47,7 @@ although you might see a Capatcha.
 
 =head2 Is there a glossary of Perl 6 related terms?
 
-See L<S99|http://design.perl6.org/S99.html#dynamic>
+See L<S99|http://design.perl6.org/S99.html>
 
 =head2 I'm a programmer in perl5. Where is a list of differences between Perl 5 and 6?
 
