[FAQ] Is Perl 6 fast enough for me

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -485,4 +485,53 @@ Please see the L<feature comparison
 matrix|http://perl6.org/compilers/features> for an overview of implemented
 features.
 
+=head2 Is Perl 6 fast enough for me?
+
+That depends on what you are doing. Rakudo has been developed with the
+philosophy of "make it work right then make it work fast". It's fast for some
+things already but needs work on others.
+
+Perl 6 is mostly being worked on by volunteers but it's expected that Perl 6
+performance will improve in the near future since the MoarVM backend contains a
+modern Just In Time (JIT) compiler.
+
+Perl 5 programmers should be aware that Perl 6 comes with more built in in
+terms of object orientation and much else. Simple benchmarks will be misleading
+unless you include things like Moose, type checking modules etc. in your Perl 5
+script.
+
+The following crude benchmarks, with all the usual caveats about such things,
+can show Perl 6 to be of roughly equivalent speed to Perl 5 for some similar
+common tasks.
+
+Try it on your system you may be pleasantly surprised!
+
+Examples:
+
+
+    # perl 6 version
+    use v6;
+
+    class Foo { has $.i is rw};
+
+    for (1..10000) -> $i {
+        my $obj = Foo.new;
+        $obj.i = $i;
+        say $obj.i;
+    }
+
+    # perl 5 version
+    package Foo;
+    use 5.10.0;
+    use Moose;
+
+    has i => ( is=> 'rw');
+
+    for my $i (1..10000) {
+        my $obj = Foo->new;
+        $obj->i($i);
+        say $obj->i;
+    }
+
+
 =end pod
