[FAQ] minor tweaks

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -43,13 +43,12 @@ Google is often outdated.
 
 You could also try searching the Freenode #perl6 IRC channel log via
 L<Google|https://www.google.co.uk/search?q=site:irclog.perlgeek.de+inurl:perl6>
-although you might see a Capatcha.
 
 =head2 Is there a glossary of Perl 6 related terms?
 
 See L<S99|http://design.perl6.org/S99.html>
 
-=head2 I'm a programmer in perl5. Where is a list of differences between Perl 5 and 6?
+=head2 I'm a Perl 5 programmer. Where is a list of differences between Perl 5 and 6?
 
 See the pod with the 5to6- prefix under L<http://doc.perl6.org/language.html|http://doc.perl6.org/language.html>
 
