[FAQ] bump example to 1m objs timotimo++

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -513,7 +513,7 @@ Examples:
 
     class Foo { has $.i is rw};
 
-    for (1..10000) -> $i {
+    for (1..1000000) -> $i {
         my $obj = Foo.new;
         $obj.i = $i;
         say $obj.i;
@@ -526,7 +526,7 @@ Examples:
 
     has i => ( is=> 'rw');
 
-    for my $i (1..10000) {
+    for my $i (1..1000000) {
         my $obj = Foo->new;
         $obj->i($i);
         say $obj->i;
