[FAQ] underscores in 1m and immutable moose

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -513,7 +513,7 @@ Examples:
 
     class Foo { has $.i is rw};
 
-    for (1..1000000) -> $i {
+    for (1..1_000_000) -> $i {
         my $obj = Foo.new;
         $obj.i = $i;
         say $obj.i;
@@ -526,11 +526,16 @@ Examples:
 
     has i => ( is=> 'rw');
 
-    for my $i (1..1000000) {
+    for my $i (1..1_000_000) {
         my $obj = Foo->new;
         $obj->i($i);
         say $obj->i;
     }
+
+    __PACKAGE__->meta->make_immutable;
+
+    1;
+
 
 
 =end pod
