Fix zip-latest signature and throttle header

--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -343,7 +343,7 @@ Creates a "rotoring" supply with the same semantics as List.rotor.
 Creates a new supply in which all values flowing through the given supply
 are emitted, but with the given delay in seconds.
 
-=head2 throttle
+=head2 method throttle
 
     method throttle(Supply:D: $elems, $seconds, $delay = 0, :$scheduler) returns Supply:D
 
@@ -472,7 +472,7 @@ supplies are done.  Can also be called as a class method.
 
 =head2 method zip-latest
 
-    method zip(Supply @*supplies, :&with = &[,], :$initial) returns Supply:D
+    method zip-latest(Supply @*supplies, :&with = &[,], :$initial) returns Supply:D
 
 Creates a supply that emits combined values as soon as there is a new value
 seen on B<any> of the supplies.  By default, C<Lists|/type/List> are
