missing > on a C<> breaks formatting

--- a/Type/Junction.pod
+++ b/Type/Junction.pod
@@ -67,7 +67,7 @@ produce an empty list:
     my @a = ();
     so all(@a) # True, because there are 0 False's
 
-To express "all, but at least one", you can use C<@a && all(@a)
+To express "all, but at least one", you can use C<@a && all(@a)>
 
     say so @a && all(@a);   # False
 
