Noted spec on faq

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -44,6 +44,12 @@ Google is often outdated.
 You could also try searching the Freenode #perl6 IRC channel log via
 L<Google|https://www.google.co.uk/search?q=site:irclog.perlgeek.de+inurl:perl6>
 
+=head2 What is the Perl 6 spec?
+
+The "spec" refers to the official test suite for Perl 6.  It's called
+roast and L<hosted on github|https://github.com/perl6/roast>. It
+is the measure of how complete a Perl 6 implementation is.
+
 =head2 Is there a glossary of Perl 6 related terms?
 
 See L<S99|http://design.perl6.org/S99.html>
