--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -345,7 +345,85 @@ are emitted, but with the given delay in seconds.
 
 =head2 method throttle
 
-    method throttle(Supply:D: $elems, $seconds, $delay = 0, :$scheduler) returns Supply:D
+    method throttle(Supply:D:
+      $limit,                 # values / time or simultaneous processing
+      $seconds or $callable,  # time-unit / code to process simultaneously
+      $delay = 0,             # initial delay before starting, in seconds
+      :$control,              # supply to emit control messages on (optional)
+      :$status,               # supply to tap status messages from (optional)
+      :$bleed,                # supply to bleed messages to (optional)
+      :$vent-at,              # bleed when so many buffered (optional)
+      :$scheduler,            # scheduler to use, default $*SCHEDULER
+      ) returns Supply:D
+
+Produces a C<Supply> from a given Supply, but makes sure the number of
+messages passed through, is limited.
+
+It has two modes of operation: per time-unit or by maximum number of
+execution of a block of code: this is determined by the second positional
+parameter.
+
+The first positional parameter specifies the limit that should be applied.
+
+If the second positional parameter is a C<Callable>, then the limit indicates
+the maximum number of parallel processes executing the Callable, which is
+given the value that was received.  The emitted values in this case will be
+the C<Promise>s that were obtained from C<start>ing the Callable.
+
+If the second positional parameter is a numeric value, it is interpreted as
+the time-unit (in seconds).  If you specify B<.1> as the value, then it makes
+sure you don't exceed the limit for every tenth of a second.
+    
+If the limit is exceeded, then incoming messages are buffered until there
+is room to pass on / execute the Callable again.
+
+The third positional parameter is optional: it indicates the number of
+seconds the throttle will wait before passing on any values.
+
+The :control named parameter optionally specifies a Supply that you can
+use to control the throttle while it is in operation.  Messages that
+can be sent, are strings in the form of "key:value".  Please see below
+for the types of messages that you can send to control the throttle.
+
+The :status named parameter optionall specifies a Supply that will receive
+any status messages.  If specified, it will at least send one status message
+after the original Supply is exhausted.  The status message is a hash with
+the following keys:
+
+=over 2 
+
+=item allowed
+
+The current number of messages / callables that is still allowed to be
+passed / executed.
+
+=item bled
+
+The number of messages routed to the :bleed Supply.
+
+=item buffered
+
+The number of messages currently buffered because of overflow.
+
+=item emitted
+
+The number of messages emitted (passed through).
+
+=item id
+
+The id of this status message (a monotonically increasing number).  Handy
+if you want to log status messages.
+
+=item limit
+
+The current limit that is being applied.
+
+=item vent-at
+
+The maximum number of messages that may be buffered before they're
+automatically re-routed to the :bleed Supply.
+
+=back
 
 Produces a C<Supply> that throttles emitting the values of the given Supply
 on the created C<Supply> by the number of elements (specified by the first
