--- a/Language/concurrency.pod
+++ b/Language/concurrency.pod
@@ -4,16 +4,16 @@
 
 =SUBTITLE Concurrency and Asynchronous Programming
 
-In common with most modern programming languages Perl 6 is designed to
+In common with most modern programming languages, Perl 6 is designed to
 L<support concurrency|http://en.wikipedia.org/wiki/Concurrent_computing>
-(allowing more than one thing to happen at the same time,) and
+(allowing more than one thing to happen at the same time) and
 asynchronous programming (sometime called event driven or reactive
 programming - that is an event or change in some part of a program
 may lead to an event or change in some other part of the program
-asynchronously to the program flow. )
+asynchronously to the program flow).
 
 The aim of the Perl concurrency design is to provide a high-level,
-composable, consistent interface regardless of how a virtual machine
+composable, consistent interface, regardless of how a virtual machine
 may implement it for a particular operating system, through layers of
 facilities as described below.
 
@@ -25,8 +25,8 @@ hyper-operators, autothreading junctions?
 
 =end comment
 
-Additionally certain Perl features may implicitly operate in an asynchronous
-fashion, so in order to ensure predictable interoperation with these features
+Additionally, certain Perl features may implicitly operate in an asynchronous
+fashion, so in order to ensure predictable interoperation with these features,
 user code should, where possible, avoid the lower level concurrency APIs
 (i.e. L<Thread> and L<Scheduler> ) and use the higher-level interfaces.
 
@@ -82,9 +82,9 @@ is illustrated with:
 
 Here the C<break> will cause the code block of the C<then> to throw an
 exception when it calls the C<result> method on the original promise
-that was passed as an argument which will subsequently cause the second
+that was passed as an argument, which will subsequently cause the second
 promise to be broken, raising an exception in turn when its result
-is taken.  The actual L<Exception> object will then be available from
+is taken. The actual L<Exception> object will then be available from
 C<cause>. If the promise had not been broken C<cause> would raise a
 L<X::Promise::CauseOnlyValidOnBroken> exception.
 
@@ -109,7 +109,7 @@ for that:
     say $promise.result;    # 55
 
 Here the C<result> of the promise returned is the value returned from
-the code.  Similarly if the code fails (and the promise is thus broken,)
+the code.  Similarly if the code fails (and the promise is thus broken),
 then C<cause> will be the L<Exception> object that was thrown:
 
     my $promise = Promise.start({ die "Broken Promise" });
@@ -212,13 +212,13 @@ necessary to do it for these.
 
 A L<Supply> is an asynchronous data streaming mechanism that can be
 consumed by one or more consumers simultaneously in a manner similar to
-"events" in other programming languages and can be seem as enabling
+"events" in other programming languages and can be seen as enabling
 "Event Driven" or reactive designs.
 
 L<Supply> is a role that can be composed into your own types, but will
 frequently be used as a "type punned" class to create standalone objects.
 
-At its simplest a L<Supply> is a message stream that can have multiple
+At its simplest, a L<Supply> is a message stream that can have multiple
 subscribers created with the method C<tap> on to which data items can be
 placed with C<emit>:
 
