Add more Supply.throttle documentation

--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -385,7 +385,7 @@ use to control the throttle while it is in operation.  Messages that
 can be sent, are strings in the form of "key:value".  Please see below
 for the types of messages that you can send to control the throttle.
 
-The :status named parameter optionall specifies a Supply that will receive
+The :status named parameter optionally specifies a Supply that will receive
 any status messages.  If specified, it will at least send one status message
 after the original Supply is exhausted.  The status message is a hash with
 the following keys:
@@ -425,11 +425,45 @@ automatically re-routed to the :bleed Supply.
 
 =back
 
-Produces a C<Supply> that throttles emitting the values of the given Supply
-on the created C<Supply> by the number of elements (specified by the first
-parameter) per number of seconds (specified by the second parameter).
-Optionally allows for specification of delay (in number of seconds), and
-scheduler to be used (defaults to $*SCHEDULER).
+The :bleed named parameter optionally specifies a Supply that will receive
+any values that were either explicitely bled (with the B<bleed> control
+message), or automatically bled (if there's a B<vent-at> active).
+
+The :vent-at named parameter indicates the number of values that may be
+buffered before any additional value will be routed to the :bleed Supply.
+Defaults to 0 if not specified (causing no automatic bleeding to happen).
+Only makes sense if a :bleed Supply has also been specified.
+
+The :scheduler named parameter indicates the scheduler to be used.  Defaults
+to $*SCHEDULER.
+
+=head3 control messages
+
+These messages can be sent to the :control Supply.  A control message
+consists of a string of the form "key: value", e.g. "limit: 4".
+
+=over 2
+
+=item limit
+
+Change the number of messages (as initially given in the first positional)
+to the value given.
+
+=item bleed
+
+Route the given number of buffered messages to the :bleed Supply.
+
+=item vent-at
+
+Change the maximum number of buffered values before automatic bleeding
+takes place.  If the value is lower than before, will cause immediate
+rerouting of buffered values to match the new maximum.
+
+=item status
+
+Send a status message to the :status Supply with the given id.
+
+=back
 
 =head2 method stable
 
