Comment about new method to not confuse new users
Due to first example contains custom `new` it may give impression that writing `new` is something that programmer want to do. Maybe it would be good to mark it as non standard behavior and say that probably want to write build method?

--- a/Language/classtut.pod
+++ b/Language/classtut.pod
@@ -17,6 +17,8 @@ is interesting and, at times, useful.
         has Task @!dependencies;
         has Bool $.done;
 
+        # Normally don't need to written
+        # BUILD is equivalent of constructor in other languages
         method new(&callback, *@dependencies) {
             return self.bless(:&callback, :@dependencies);
         }
