update version string

--- a/Language/5to6-perlvar.pod
+++ b/Language/5to6-perlvar.pod
@@ -159,9 +159,8 @@ only difference seems to be that OLDPWD is missing from Perl 6's %ENV.
 
 =item $]
 
-The version of the perl is returned by C<$*PERL.version>. As of this writing,
-that is "vunknown", which may be less than useful. For the record, C<$*PERL>
-itself contains, as of this writing, "Perl 6".
+The version of perl is returned by C<$*PERL.version>. For the beta this was
+"v6.b" with C<$*PERL> containing "Perl 6 (6.b)".
 
 =item $SYSTEM_FD_MAX
 
