correct minor typos

--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -21,7 +21,7 @@ files in a namespace.
 
 =head2 Basic Structure
 
-Module distributions in Perl 6 have the same stucture as any distribution in
+Module distributions in Perl 6 have the same structure as any distribution in
 the Perl family of languages:  there is a main project directory containing
 a C<README> and C<LICENSE> file, a C<lib> directory for modules, a C<t>
 directory for tests, and possibly a C<bin> directory for executable programs
