--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -426,7 +426,7 @@ automatically re-routed to the :bleed Supply.
 =back
 
 The :bleed named parameter optionally specifies a Supply that will receive
-any values that were either explicitely bled (with the B<bleed> control
+any values that were either explicitly bled (with the B<bleed> control
 message), or automatically bled (if there's a B<vent-at> active).
 
 The :vent-at named parameter indicates the number of values that may be
