Make clear that is export should appear after function args list

--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -83,6 +83,13 @@ them with the L<is export> trait.
     class MyModule::MyClass {};
     =end code
 
+As with all traits, if applied to a routine, "is export" should appear after
+any argument list.
+
+    =begin code
+    sub foo (Str $string) is export { ... }
+    =end code
+
 You can pass named parameters to C<is export> to group symbols for exporting
 then the importer can pick and choose. There are three predefined
 tags: C<ALL>, C<DEFAULT> and C<MANDATORY>.
