Reword to avoid . twigil right before a period

--- a/Language/classtut.pod
+++ b/Language/classtut.pod
@@ -140,7 +140,7 @@ X<|accessor methods>
 X<|classes, accessors>
 
 This scalar attribute (with the C<$> sigil) has a type of C<Bool>.  Instead
-of the C<!> twigil, this twigil is C<.>. While Perl 6 does enforce
+of the C<!> twigil, the C<.> twigil is used. While Perl 6 does enforce
 encapsulation on attributes, it also saves you from writing accessor
 methods.  Replacing the C<!> with a C<.> both declares the attribute
 C<$!done> and an accessor method named C<done>. It's as if you had written:
