Document :with on List.unique

--- a/Type/List.pod
+++ b/Type/List.pod
@@ -556,19 +556,20 @@ Examples:
 
 Defined as:
 
-    multi sub    unique(*@values, :&as) returns Seq:D
-    multi method unique(List:D:,  :&as) returns Seq:D
+    multi sub    unique(*@values, :&as, :&with) returns Seq:D
+    multi method unique(List:D:,  :&as, :&with) returns Seq:D
 
 Usage:
 
-    unique LIST, :COMPARE_AS
-    LIST.unique(:COMPARE_AS)
+    unique LIST, :COMPARE_AS, :COMPARE_WITH
+    LIST.unique(:COMPARE_AS, :COMPARE_WITH)
 
 Returns a sequence of unique values from the invocant/argument list, such
 that only the first occurrence of each duplicated value remains in the
-result list. C<unique> uses the semantics of the L<===> operator to decide whether
-two objects are the same. The order of the original list is preserved even as
-duplicates are removed.
+result list. C<unique> uses the semantics of the L<===> operator to decide
+whether two objects are the same, unless the optional C<:with> parameter is
+specified with another comparator. The order of the original list is preserved
+even as duplicates are removed.
 
 Examples:
 
@@ -579,12 +580,21 @@ Examples:
 objects are adjacent.)
 
 The optional C<:as> parameter allows you to normalize/canonicalize the elements
-before unique-ing. The values are transformed for the purposes of comparison, but
-it's still the original values that make it to the result list:
+before unique-ing. The values are transformed for the purposes of comparison,
+but it's still the original values that make it to the result list:
 
 Example:
 
     say <a A B b c b C>.unique(:as(&lc))          # a B c
+
+One can also specify the comparator with the optional C<:with> parameter.  For
+instance if one wants a list of unique hashes, one could use the C<eqv>
+comparator.
+
+Example:
+
+    my @list = {a => 42}, {b => 13}, {a => 42};
+    say @list.unique(:with(&[eqv]))               # {a=>42} {b=>13}
 
 =head2 routine squish
 
