Add documentation for List.repeated

--- a/Type/List.pod
+++ b/Type/List.pod
@@ -564,7 +564,7 @@ Usage:
     unique LIST, :COMPARE_AS, :COMPARE_WITH
     LIST.unique(:COMPARE_AS, :COMPARE_WITH)
 
-Returns a sequence of unique values from the invocant/argument list, such
+Returns a sequence of B<unique> values from the invocant/argument list, such
 that only the first occurrence of each duplicated value remains in the
 result list. C<unique> uses the semantics of the L<===> operator to decide
 whether two objects are the same, unless the optional C<:with> parameter is
@@ -595,6 +595,32 @@ Example:
 
     my @list = {a => 42}, {b => 13}, {a => 42};
     say @list.unique(:with(&[eqv]))               # {a=>42} {b=>13}
+
+=head2 routine repeated
+
+Defined as:
+
+    multi sub    repeated(*@values, :&as, :&with) returns Seq:D
+    multi method repeated(List:D:,  :&as, :&with) returns Seq:D
+
+Usage:
+
+    repeated LIST, :COMPARE_AS, :COMPARE_WITH
+    LIST.repeated(:COMPARE_AS, :COMPARE_WITH)
+
+Returns a sequence of B<repeated> values from the invocant/argument list.
+It takes the same parameters as L<C<unique>>, but instead of passing through
+any elements when they're first seen, they're only passed through as soon
+as they're seen for the second time (or more).
+
+Examples:
+
+    say <a a b b b c c>.repeated                    # a b b b c
+    say <a b b c c b a>.repeated                    # a b c b a
+    say <a A B b c b C>.repeated(:as(&lc))          # A b b C
+
+    my @list = {a => 42}, {b => 13}, {a => 42};
+    say @list.repeated(:with(&[eqv]))               # {a=>42}
 
 =head2 routine squish
 
