Document grep :k,:kv,:p,:v, remove grep-index

--- a/Type/List.pod
+++ b/Type/List.pod
@@ -241,8 +241,8 @@ invokes C<uc|/type/Str#routine uc> four times.
 
 Defined as:
 
-    multi sub    grep(Mu $matcher, *@elems) returns Seq:D
-    multi method grep(List:D:  Mu $matcher) returns Seq:D
+    multi sub    grep(Mu $matcher, *@elems, :k, :kv, :p, :v) returns Seq:D
+    multi method grep(List:D:  Mu $matcher, :k, :kv, :p, :v) returns Seq:D
 
 Usage:
 
@@ -260,25 +260,38 @@ Examples:
     > grep { .Str.chars > 3 }, 'hello', 1, 22/7, 42, 'world'
     (hello 3.142857 world)
 
-=head2 routine grep-index
+The optional named parameters C<:k>, C<:kv>, C<:p>, C<:v> provide the same
+functionality as on slices:
 
-Defined as:
+=over 4
 
-    multi method grep-index(List:D: Mu $matcher) returns Seq:D
+=item k
 
-Usage:
+Only return the index values of the matching elements in order.
 
-    LIST.grep-index(MATCHER)
+=item kv
 
-Returns a sequence of indices against which the associated elements
-smart-match.  The indices are returned in order.
+Return both the index and matched elements in order.
+
+=item p
+
+Return the index and the matched element as a C<Pair>, in order.
+
+=item v
+
+Only return the matched elements (same as not specifying any named parameter
+at all).
+
+=back
 
 Examples:
 
-    > ('hello', 1, 22/7, 42, 'world').grep-index: Int
+    > ('hello', 1, 22/7, 42, 'world').grep: Int, :k
     (1 3)
-    > grep-index { .Str.chars > 3 }, 'hello', 1, 22/7, 42, 'world'
-    (0 2 4)
+    > grep { .Str.chars > 3 }, :kv, 'hello', 1, 22/7, 42, 'world'
+    (0 hello 2 3.142857 4 world)
+    > grep { .Str.chars > 3 }, :p, 'hello', 1, 22/7, 42, 'world'
+    (0 => hello 2 => 3.142857 4 => world)
 
 =head2 routine first
 
