--- a/Type/List.pod
+++ b/Type/List.pod
@@ -345,6 +345,42 @@ Examples:
     say (1, 22/7, 42, 300).first: * > 5, :p;        # 2 => 42
     say (1, 22/7, 42, 300).first: * > 5, :kv, :end; # 3 300
 
+=head2 method head
+
+Defined as:
+
+    multi method head(List:D: Int:D $number) returns Seq:D
+
+Usage:
+
+    LIST.head(NUMBER)
+
+Returns the B<first> NUMBER items of the list.  Returns an empty list if
+NUMBER <= 0.
+
+Examples:
+
+    say ^10 .head(5)       # 0 1 2 3 4
+    say ^Inf .head(5)      # 0 1 2 3 4
+
+=head2 method tail
+
+Defined as:
+
+    multi method tail(List:D: Int:D $number) returns Seq:D
+
+Usage:
+
+    LIST.tail(NUMBER)
+
+Returns the B<last> NUMBER items of the list.  Returns an empty list if
+NUMBER <= 0.  Throws an exception if the list is lazy.
+
+Examples:
+
+    say ^10 .tail(5)      # 5 6 7 8 9
+    say ^Inf .tail(5)     # Cannot tail a lazy list
+
 =head2 routine classify
 
 Defined as:
