Adjust for (Nil) to Nil change

--- a/Type/List.pod
+++ b/Type/List.pod
@@ -316,7 +316,7 @@ Examples:
 
     say (1, 22/7, 42, 300).first: * > 5;                  # 42
     say (1, 22/7, 42, 300).first: * > 5, :end;            # 300
-    say ('hello', 1, 22/7, 42, 'world').first: Complex;   # (Nil)
+    say ('hello', 1, 22/7, 42, 'world').first: Complex;   # Nil
 
 The optional named parameters C<:k>, C<:kv>, C<:p> provide the same
 functionality as on slices:
