Add minimal explanation about IO::Handle.split

--- a/Type/IO/Handle.pod
+++ b/Type/IO/Handle.pod
@@ -55,6 +55,13 @@ to C<$count> words.
     ++%dict{$_} for $*IN.words;
     say "Most common words: ", %dict.sort(*.value).reverse.[^5];
 
+=head2 method split
+
+    method split(splitter = "")
+
+Returns a lazy list of strings found between the splitter, just like C<split>
+on strings.
+
 =head2 method print
 
     method print(*@text --> Bool)
