Add minimal explanation about IO::Handle.comb

--- a/Type/IO/Handle.pod
+++ b/Type/IO/Handle.pod
@@ -62,6 +62,13 @@ to C<$count> words.
 Returns a lazy list of strings found between the splitter, just like C<split>
 on strings.
 
+=head2 method comb
+
+    method comb(comber = "")
+
+Returns a lazy list of strings combed from the handle, just like C<comb>
+on strings.
+
 =head2 method print
 
     method print(*@text --> Bool)
