Document IO::Handle.readchars + some cleanup

--- a/Type/IO/Handle.pod
+++ b/Type/IO/Handle.pod
@@ -73,7 +73,8 @@ on strings.
 
     method print(*@text --> Bool)
 
-Text writing; writes the given C<@text> to the filehandle.
+Text writing; writes the given C<@text> to the filehandle.  See L<write>
+to write bytes.
 
     my $fh = open 'path/to/file', :w;
     $fh.print("some text\n");
@@ -83,13 +84,21 @@ Text writing; writes the given C<@text> to the filehandle.
 
     method read(IO::Handle:D: Int(Cool:D) $bytes --> Blob)
 
-Binary reading; reads and returns C<$bytes> bytes from the handle
+Binary reading; reads and returns up to C<$bytes> bytes from the filehandle.
+
+=head2 method readchars
+
+    method readchars(IO::Handle:D: Int(Cool:D) $chars --> Str)
+
+Reading chars; reads and returns up to C<$chars> chars (graphemes) from the
+filehandle.
 
 =head2 method write
 
     method write(IO::Handle:D: Blob:D $buf)
 
-Binary writing; writes C<$buf> to the filehandle.
+Binary writing; writes C<$buf> to the filehandle.  See L<print> to write
+characters.
 
 =head2 method seek
 
