Document IO::Handle.Supply

--- a/Type/IO/Handle.pod
+++ b/Type/IO/Handle.pod
@@ -143,6 +143,16 @@ Return the remaining content of the file from the current file position
 adverb C<:bin> is provided a L<Buf> will be returned,
 otherwise the return will be a C<Str> with the optional encoding C<:enc>.
 
+=head2 method Supply
+
+    multi method Supply(IO::Handle:D: :$size = 65536, :$bin --> Supply)
+
+Returns a C<Supply> that will emit the contents of the handle in chunks.
+The size of the chunks is determined by the optional C<:size> named parameter
+and defaults to 64K.  The optional C<:bin> named parameter can be specified
+to indicate binary reading of the contents, rather than character based
+reading.
+
 =head2 method close
 
 Will close a previously opened filehandle.
