--- a/Language/classtut.pod
+++ b/Language/classtut.pod
@@ -328,7 +328,7 @@ handle default values too:
             :$!ready = not @!dependencies
         ) { }
 
-See L<Object Construction|/language/objects#Object Construction> for more
+See L<Object Construction|/language/objects#Object_Construction> for more
 options to influence object construction and attribute initialization.
 
 =head1 Consuming our class
